Fixed the spacing issue

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -8,6 +8,7 @@
   box-shadow: 0px 1px 3px #2a2a2a;
   background:url('topnavpattern.png');
   color: #05E4F0;
+  margin:0;
 }
 
 .navbar-inverse a.navbar-brand {
@@ -38,7 +39,7 @@ h1, h2, h3, h4, h5, h6 .navbar {
 
 .frosty h1 {
   font-family: "Helvetica Neue", Helvetica;
-  font-weight: 50;
+  font-weight: 100;
   text-shadow: rgba(0,0,0,0.95) 1px 1px;
 }
 
